--- a/MainProject/product/templates/product/shop.html
+++ b/MainProject/product/templates/product/shop.html
@@ -371,6 +371,7 @@
                         <div class="row">
 
                             <!-- Single Product -->
+                             {% for i in products %}
                             <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="single-product-wrapper">
                                     <!-- Product Image -->
@@ -407,6 +408,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
 
                     <!-- Pagination -->
                     <nav aria-label="navigation">
