--- a/MainProject/templates/shop.html
+++ b/MainProject/templates/shop.html
@@ -173,6 +173,7 @@
                         <div class="row">
 
                             <!-- Single Product -->
+                             {% for i in products %}
                             <div class="col-12 col-sm-6 col-lg-4">
                                 <div class="single-product-wrapper">
                                     <!-- Product Image -->
@@ -193,11 +194,11 @@
 
                                     <!-- Product Description -->
                                     <div class="product-description">
-                                        <span>topshop</span>
+                                        <span>{{i.brand.name}}</span>
                                         <a href="{% url 'single-product-details' %}">
-                                            <h6>Knot Front Mini Dress</h6>
+                                            <h6>{{i.name}}</h6>
                                         </a>
-                                        <p class="product-price"><span class="old-price">$75.00</span> $55.00</p>
+                                        <p class="product-price"><span class="old-price">$75.00</span> {{i.price_inclusive}}</p>
 
                                         <!-- Hover Content -->
                                         <div class="hover-content">
