--- a/MainProject/product/templates/product/shop.html
+++ b/MainProject/product/templates/product/shop.html
@@ -201,7 +201,7 @@
                                         <div class="hover-content">
                                             <!-- Add to Cart -->
                                             <div class="add-to-cart-btn">
-                                                <a href="{% url '#' %}" class="btn essence-btn">Add to Cart</a>
+                                                <a href="{% url 'add_to_cart' product.details.id %}" class="btn essence-btn">Add to Cart</a>
                                             </div>
                                         </div>
                                     </div>
