--- a/MainProject/templates/base.html
+++ b/MainProject/templates/base.html
@@ -69,14 +69,13 @@
     <link rel="icon" href="{% static 'img/core-img/favicon.ico' %}">
     <!-- Core Style CSS -->
     <link rel="stylesheet" href="{% static 'css/core-style.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 
 <body>
     <!-- ##### Header Area Start ##### -->
     <header class="header_area">
-        
         <div class="classy-nav-container breakpoint-off d-flex align-items-center justify-content-between">
             <!-- Classy Menu -->
             <nav class="classy-navbar" id="essenceNav">
@@ -156,14 +155,11 @@
                             <li><a href="{% url 'blog' %}">Blog</a></li>
                             <li><a href="{% url 'contact' %}">Contact</a></li>
                             {% if request.user.is_authenticated %}
-                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                            <li><a href="{% url 'logout' %}">logout</a></li>
                             {% else %}
-                            <li><a href="{% url 'login' %}">Login</a></li>
+                            <li><a href="{% url 'login' %}">login</a></li>
                             <li><a href="{% url 'register' %}">Register</a></li>
                             {% endif %}
-
-
-
                         </ul>
                     </div>
                     {% block messages %}
@@ -208,20 +204,18 @@
                 {% if request.user.is_authenticated %}
                 <!-- Cart Area -->
                 <div class="cart-area">
-                    <a href="#" id="essenceCartBtn"><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>3</span></a>
+                    <a href="#" id="essenceCartBtn" ><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>{{total_cart_item}}</span></a>
                 </div>
                 {% else %}
                 <div class="cart-area">
-                    <a href="{% url 'login' %}" id="essenceCartBtn"><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>3</span></a>
+                    <a href="{% url 'login' %}" id="essenceCartBtn" ><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>{{total_cart_item}}</span></a>
                 </div>
                 {% endif %}
-
             </div>
-
         </div>
     </header>
     <!-- ##### Header Area End ##### -->
-
+{% if request.user.is_authenticated %}
     <!-- ##### Right Side Cart Area ##### -->
     <div class="cart-bg-overlay"></div>
 
@@ -229,7 +223,7 @@
 
         <!-- Cart Button -->
         <div class="cart-button">
-            <a href="{% url '#' %}" id="rightSideCart"><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>3</span></a>
+            <a href="{% url '#' %}" id="rightSideCart"><img src="{% static 'img/core-img/bag.svg' %}" alt=""> <span>{{total_cart_item}}</span></a>
         </div>
 
         <div class="cart-content d-flex">
@@ -237,24 +231,26 @@
             <!-- Cart List Area -->
             <div class="cart-list">
                 <!-- Single Cart Item -->
-                {% for p in product %}
+                <form action="{% url 'update_cart' %}"></form>
+                {% for item in cart_items %}
                     <div class="single-cart-item">
-                        <a href="{% url 'product_details' p.product.id %}" class="product-image">
-                            <img src="{{ p.image.image.url }}" class="cart-thumb" alt="{{p.image.product}}">
+                        <a href="{% url 'product_details' item.product.id %}" class="product-image">
+                            <img src="{{ item.image.image.url }}" class="cart-thumb" alt="{{ item.image.product}}">
                             <!-- Cart Item Desc -->
                             <div class="cart-item-desc">
                             <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                                <span class="badge">{{p.product.brand.name}}</span>
-                                <h6>{{p.product.name}}</h6>
-                                <p class="size">Quantity:{{p.product.quantity}}</p>
-                                <p class="price">{{p.product.product.price_inclusive}}</p>
+                                <span class="badge">{{item.product.brand.name}}</span>
+                                <h6>{{item.product.name}}</h6>
+                                <label for="{{item.product.id}}" >Quantity</label>
+                                <input type="number" name="{{item.product.id}}" value="{{item.product.quantity}}" id="">
+
+                                <p class="size">Quantity: {{ item.product.quantity }}</p>
+                                <p class="price">{{ item.product.product.price_inclusive }}</p>
                             </div>
                         </a>
                     </div>
                 {% endfor %}
-             
             </div>
-
             <!-- Cart Summary -->
             <div class="cart-amount-summary">
 
@@ -268,12 +264,16 @@
                 <div class="checkout-btn mt-100">
                     <a href="{% url 'checkout' %}" class="btn essence-btn">check out</a>
                 </div>
+                <div class="checkout-btn mt-100">
+                    <input type="submit" value="Update Cart" class="btn essence-btn">
+                </div>
             </div>
         </div>
     </div>
     <!-- ##### Right Side Cart End ##### -->
+</form>
 
-
+{% endif %}
 
 
 
@@ -358,9 +358,11 @@
                                 <li><a href="{% url 'blog' %}">Blog</a></li>
                                 <li><a href="{% url 'contact' %}">Contact</a></li>
                                 {% if request.user.is_authenticated %}
-                                <li><a href="{% url 'logout' %}">Logout</a></li>
+                                <li><a href="{% url 'logout' %}">logout</a></li>
+                                {% else %}
+                                <li><a href="{% url 'login' %}">login</a></li>
+                                <li><a href="{% url 'register' %}">Register</a></li>
                                 {% endif %}
-
                             </ul>
                         </div>
                     </div>
@@ -435,8 +437,6 @@
     <script src="{% static 'js/classy-nav.min.js' %}"></script>
     <!-- Active js -->
     <script src="{% static 'js/active.js' %}"></script>
-
-   
 
 </body>
 
