--- a/MainProject/templates/base.html
+++ b/MainProject/templates/base.html
@@ -236,9 +236,10 @@
                     <div class="single-cart-item">
                         <a href="{% url 'product_details' item.product.id %}" class="product-image">
                             <img src="{{ item.image.image.url }}" class="cart-thumb" alt="{{ item.image.product}}">
+                        </a>
                             <!-- Cart Item Desc -->
                             <div class="cart-item-desc">
-                            <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
+                            <a href="{% url 'remove_from_cart' item.product.id %}" class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></a>
                                 <span class="badge">{{item.product.brand.name}}</span>
                                 <h6>{{item.product.name}}</h6>
                                 <label for="{{item.product.id}}" >Quantity</label>
@@ -247,7 +248,7 @@
                                 <p class="size">Quantity: {{ item.product.quantity }}</p>
                                 <p class="price">{{ item.product.product.price_inclusive }}</p>
                             </div>
-                        </a>
+                        
                     </div>
                 {% endfor %}
             </div>
